# reference-apps

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.agents/skills/app-refs-ops/: SKILL.md
.claude/commands/: app-refs-ops.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  nightly.yml
.specify/memory/: constitution.md
apps/android-demo/: README.md  settings.gradle.kts
apps/android-demo/app/: build.gradle.kts
apps/browser-consumer/: README.md  index.js  package.json
apps/doc-approval/: Cargo.toml
apps/doc-approval/DocApprovalCore/: Package.swift  README.md
apps/doc-approval/android-compose/: README.md  settings.gradle.kts
apps/doc-approval/android-compose/app/: build.gradle.kts
apps/doc-approval/cli-rust/: Cargo.toml  README.md
apps/doc-approval/cli-rust/src/: client.rs  lib.rs  main.rs  output.rs
apps/doc-approval/cli-rust/src/commands/: health.rs  mod.rs  submit.rs
apps/doc-approval/cli-rust/tests/: integration_tests.rs
apps/doc-approval/doc-approval-core-rs/: Cargo.toml
apps/doc-approval/doc-approval-core-rs/src/: client.rs  discovery.rs  host.rs  lib.rs  sessions.rs  sse.rs  state.rs
apps/doc-approval/doc-approval-core-rs/tests/: client_tests.rs  host_tests.rs  sse_tests.rs
apps/doc-approval/ios-swift/: README.md
apps/doc-approval/ios-swift/DocApproval/: AppSettings.swift  ContentView.swift  DocApprovalApp.swift  TraverseClient.swift
apps/doc-approval/ios-swift/DocApproval.xcodeproj/: project.pbxproj
apps/doc-approval/ios-swift/DocApprovalTests/: AppSettingsSmokeTests.swift  ExecutionViewModelTests.swift  TraverseClientTests.swift
apps/doc-approval/linux-gtk/: Cargo.toml  README.md
apps/doc-approval/linux-gtk/src/: client.rs  execution_state.rs  lib.rs  main.rs  settings.rs
apps/doc-approval/linux-gtk/src/ui/: main_window.rs  preferences.rs
apps/doc-approval/linux-gtk/tests/: client_tests.rs
apps/doc-approval/macos-swift/: README.md
apps/doc-approval/web-react/: .env  README.md  index.html  package.json  tsconfig.app.json
apps/doc-approval/windows-winui/: .gitignore  DocApproval.sln  README.md
apps/macos-demo/: Package.swift  README.md
apps/meeting-notes/: Cargo.toml
apps/meeting-notes/cli-rust/: Cargo.toml  README.md
apps/meeting-notes/cli-rust/src/: client.rs  lib.rs  main.rs  output.rs
apps/meeting-notes/cli-rust/src/commands/: health.rs  submit.rs
apps/meeting-notes/cli-rust/tests/: integration_tests.rs
apps/meeting-notes/linux-gtk/: Cargo.toml  README.md
apps/meeting-notes/linux-gtk/src/: client.rs  execution_state.rs  lib.rs  main.rs  settings.rs
apps/meeting-notes/linux-gtk/src/ui/: main_window.rs  preferences.rs
apps/meeting-notes/linux-gtk/tests/: client_tests.rs
apps/meeting-notes/meeting-notes-core-rs/: Cargo.toml
apps/meeting-notes/web-react/: .env  README.md  index.html  package.json  vite.config.ts
apps/react-demo/: README.md  index.html  server.mjs
apps/react-demo/public/: expedition-runtime-session.json
apps/react-demo/src/: browser-adapter-client.js  main.js  styles.css
apps/trace-explorer/web-react/: .env  .gitignore  README.md  index.html  package.json  vite.config.ts
apps/traverse-starter/: Cargo.toml
apps/traverse-starter/TraverseCore/: Package.swift  README.md
apps/traverse-starter/android-compose/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apps/traverse-starter/cli-rust/: Cargo.toml  README.md
apps/traverse-starter/cli-rust/src/: client.rs  lib.rs  main.rs  output.rs
apps/traverse-starter/cli-rust/src/commands/: health.rs  mod.rs  run.rs
apps/traverse-starter/cli-rust/tests/: integration_tests.rs
apps/traverse-starter/ios-swift/: README.md
apps/traverse-starter/linux-gtk/: Cargo.toml  README.md
apps/traverse-starter/linux-gtk/src/: client.rs  execution_state.rs  lib.rs  main.rs  settings.rs
apps/traverse-starter/linux-gtk/src/ui/: main_window.rs  mod.rs  preferences.rs
apps/traverse-starter/linux-gtk/tests/: client_tests.rs
apps/traverse-starter/macos-swift/: README.md
apps/traverse-starter/traverse-core-rs/: Cargo.toml
apps/traverse-starter/traverse-core-rs/src/: client.rs  host.rs  lib.rs  sse.rs  state.rs
apps/traverse-starter/traverse-core-rs/tests/: client_tests.rs  host_tests.rs  sse_tests.rs
apps/traverse-starter/web-react/: .env  README.md  index.html  package.json  vite.config.ts
apps/traverse-starter/windows-winui/: README.md  TraverseStarter.sln
apps/youaskm3-starter-kit/: README.md  package.json
ci/: coverage-targets.txt
docs/: add-platform-client.md  adopted-platform-clients.md  design-language.md  embedded-runtime-plan.md  getting-started-embedded.md  handoff-traverse-unblocker-tickets.md  multi-thread-workflow.md  production-packaging.md  production-playbook.md  production-reference-plan.md  quality-standards.md  runtime-bundle-sync.md  ticket-standard.md  traverse-runtime.md  traverse-starter-plan.md  youaskm3-starter-kit.md
manifests/doc-approval/: app.manifest.json
manifests/meeting-notes/: app.manifest.json
manifests/traverse-starter/: app.manifest.json
manifests/traverse-starter/components/: process-agent.manifest.json
scripts/ci/: android_demo_smoke.sh  browser_consumer_package_smoke.sh  coverage_gate.sh  embedded_smoke.sh  embedded_smoke_web.mjs  macos_demo_smoke.sh  onboarding_check.sh  phase1_smoke.sh  phase2_link_traverse.sh  phase2_smoke.sh  pin_traverse_starter_smoke_agents.sh  pr_body_check.sh  prepare_embedded_smoke_bundle.sh  react_demo_live_adapter_smoke.sh  react_demo_smoke.sh  repository_checks.sh  sync_android_doc_approval_bundle.sh  sync_android_starter_bundle.sh  sync_bundle_core.sh  sync_swift_doc_approval_bundle.sh  sync_swift_starter_bundle.sh  sync_web_doc_approval_bundle.sh  sync_web_meeting_notes_bundle.sh  sync_web_starter_bundle.sh  sync_windows_doc_approval_bundle.sh  sync_windows_starter_bundle.sh  sync_winui_doc_approval_bundle.sh  sync_winui_starter_bundle.sh  youaskm3_starter_kit_smoke.sh
scripts/ci/fixtures/: build_starter_smoke_agents.mjs
(+205 files in other folders)
