[package]
name = "doc-approval-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for doc-approval (embedded Traverse runtime)"
license = "MIT"

[[bin]]
name = "doc-approval"
path = "src/main.rs"

[dependencies]
doc-approval-core-rs = { path = "../doc-approval-core-rs" }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
