[package]
name = "doc-approval-core-rs"
version = "0.1.0"
edition = "2021"
description = "Shared Traverse embedded-runtime client for doc-approval Rust shells"
license = "MIT"

[dependencies]
traverse-embedder = { git = "https://github.com/traverse-framework/Traverse.git", package = "traverse-embedder" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
serde_json = "1"
