[package]
name = "doc-approval-gtk"
version = "0.1.0"
edition = "2021"
description = "Native GTK4 client for doc-approval (Phase 1 HTTP polling)"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "doc-approval-gtk"
path = "src/main.rs"

[dependencies]
doc-approval-core-rs = { path = "../doc-approval-core-rs" }
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_5"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
