[package]
name = "meeting-notes-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for meeting-notes (embedded Traverse runtime)"
license = "MIT"

[[bin]]
name = "meeting-notes"
path = "src/main.rs"

[dependencies]
meeting-notes-core-rs = { path = "../meeting-notes-core-rs" }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
