[package]
name = "traverse-starter-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for traverse-starter (Phase 1 HTTP polling)"
license = "MIT"

[[bin]]
name = "traverse-starter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
