[package]
name = "traverse-starter-gtk"
version = "0.1.0"
edition = "2021"
description = "Native GTK4 client for traverse-starter (Phase 1 HTTP polling)"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "traverse-starter-gtk"
path = "src/main.rs"

[dependencies]
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_5"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
