[package]
name = "traverse-starter-gtk"
version = "0.1.0"
edition = "2021"
description = "Native GTK4 client for traverse-starter (embedded Traverse runtime)"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "traverse-starter-gtk"
path = "src/main.rs"

[dependencies]
traverse-core-rs = { path = "../traverse-core-rs" }
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[dev-dependencies]
